# slack_manage_cli

./: .gitignore  Cargo.toml  README.adoc  README.md
api_schema/: README.md  manicured.openapi.yaml
src/: channels.rs  cli.rs  cli_opts.rs  commands.rs  main.rs  usergroup.rs  usergroups.rs  users.rs
src/api_client/apis/: admin_api.rs  admin_apps_api.rs  admin_apps_approved_api.rs  admin_apps_requests_api.rs  admin_apps_restricted_api.rs  admin_conversations_api.rs  admin_conversations_ekm_api.rs  admin_conversations_restrict_access_api.rs  admin_emoji_api.rs  admin_invite_requests_api.rs  admin_invite_requests_approved_api.rs  admin_invite_requests_denied_api.rs  admin_teams_admins_api.rs  admin_teams_api.rs  admin_teams_owners_api.rs  admin_teams_settings_api.rs  admin_usergroups_api.rs  admin_users_api.rs  admin_users_session_api.rs  api_api.rs  apps_api.rs  apps_event_authorizations_api.rs  apps_permissions_api.rs  apps_permissions_resources_api.rs  apps_permissions_scopes_api.rs  apps_permissions_users_api.rs  auth_api.rs  bots_api.rs  calls_api.rs  calls_participants_api.rs  chat_api.rs  chat_scheduled_messages_api.rs  configuration.rs  conversations_api.rs  dialog_api.rs  dnd_api.rs  emoji_api.rs  files_api.rs  files_comments_api.rs  files_remote_api.rs  (+18 more)
src/api_client/models/: conversations_list_channel.rs  conversations_list_channel_purpose.rs  conversations_list_channel_topic.rs  conversations_list_conversation_type.rs  conversations_list_error_response_body.rs  conversations_list_group.rs  conversations_list_im.rs  conversations_list_response_body.rs  conversations_list_response_body_response_metadata.rs  mod.rs  objs_bot_profile.rs  objs_bot_profile_icons.rs  objs_channel.rs  objs_comment.rs  objs_file.rs  objs_team.rs  (+27 more)
