[package]
name = "slack_manage_cli"
version = "0.0.1"
authors = ["John Stableford"]
description = "Slack CLI utils for managing users"
license = "Apache-2.0 OR MIT"
edition = "2018"
include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
slack_api = "0.21.0"
reqwest = "^0.9.0"
clap = "2.33"
regex = "1"
prettytable-rs = "^0.8"
structopt = "0.2"
dotenv = "0.14.1"

[[bin]]
name = "slack-manage"
path = "src/main.rs"
