[package]
name = "slack_manage_cli"
version = "0.0.1"
authors = ["John Stableford"]
description = "Slack CLI utils for managing users"
license = "Apache-2.0 OR MIT"
edition = "2018"
include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
clap = "2.33"
regex = "1"
prettytable-rs = "^0.8"
structopt = "0.3.16"
dotenv = "0.15.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart", "blocking"]

[[bin]]
name = "slack-manage"
path = "src/main.rs"
